squarespace deploy Apr 9, 2019 4:51 PM

--- a/collections/blog.conf
+++ b/collections/blog.conf
@@ -1,7 +1,6 @@
 {
-  "title" : "Blog",
-  "ordering" : "chronological",
-  "addText" : "Add Post",
-  "acceptTypes": ["text"],
-  "promotedBlocks" : ["image", "video", "embed", "quote", "gallery"]
+    "title": "Blog",
+    "ordering": "user-orderable",
+    "addText": "Add posts",
+    "acceptTypes": ["customText", "customImage", "customVideo"]
 }
