--- a/template.conf
+++ b/template.conf
@@ -1,25 +1,64 @@
 {
-  "name" : "Native",
-  "debug" : false,
-  "author" : "Squarespace",
-  "vertical" : "Blog",
+    "name": "Deem Journal",
+    "author": "Brandon Lee Kitajchuk",
 
-  "layouts" : {
-    "default" : {
-      "name" : "Default",
-      "regions" : [ "site" ]
-    }
-  },
+    "layouts": {
+        "default": {
+            "name": "Default",
+            "regions": ["site"]
+        }
+    },
 
-  "navigations" : [ {
-      "title" : "Main Navigation",
-      "name" : "mainNav"
-  } ],
+    "navigations": [
+        {
+            "title": "Navi",
+            "name": "navi"
+        }
+    ],
 
-  "stylesheets" : [ "font-awesome.css", "tweak.less", "global.less", "mobile.less" ],
+    "stylesheets": [
+        "tweaks.less",
+        "screen.css"
+    ],
 
-  "systemCollections" : [ "gallery", "events", "album", "products" ],
+    "systemCollections": [],
 
-  "systemPartials": [ "sqs-social-links" ]
-
+    "customTypes": [
+        {
+            "title": "Custom Text",
+            "name": "customText",
+            "base": "text",
+            "fields": [
+                {
+                    "name": "darkTheme",
+                    "type": "checkbox",
+                    "title": "Enable Dark Theme"
+                }
+            ]
+        },
+        {
+            "title": "Custom Image",
+            "name": "customImage",
+            "base": "image",
+            "fields": []
+        },
+        {
+            "title": "Custom Video",
+            "name": "customVideo",
+            "base": "video",
+            "fields": []
+        },
+        {
+            "title": "Custom Audio",
+            "name": "customAudio",
+            "base": "audio",
+            "fields": []
+        },
+        {
+            "title": "Custom Events",
+            "name": "customEvent",
+            "base": "event",
+            "fields": []
+        }
+    ]
 }
