squarespace deploy Apr 11, 2019 12:10 PM

--- a/template.conf
+++ b/template.conf
@@ -11,7 +11,7 @@
 
     "navigations": [
         {
-            "title": "Navi",
+            "title": "Deem Sitemap",
             "name": "navi"
         }
     ],
