squarespace deploy Apr 13, 2019 4:03 PM

--- a/collections/stories.conf
+++ b/collections/stories.conf
@@ -2,6 +2,6 @@
     "title": "Deem Stories",
     "ordering": "user-orderable",
     "addText": "Add posts",
-    "acceptTypes": ["customText", "customImage", "customVideo", "customEvent"],
+    "acceptTypes": ["customText"],
     "pageSize": 999
 }
