--- a/template.conf
+++ b/template.conf
@@ -30,11 +30,32 @@
             "base": "text",
             "fields": [
                 {
-                    "name": "darkTheme",
+                    "name": "h1RoobertMedium",
                     "type": "checkbox",
-                    "title": "Enable Dark Theme"
+                    "title": "H1 Roobert Medium"
+                },
+                {
+                    "name": "h2RoobertMedium",
+                    "type": "checkbox",
+                    "title": "H2 Roobert Medium"
+                },
+                {
+                    "name": "h1CheltenhamBook",
+                    "type": "checkbox",
+                    "title": "H1 Cheltenham Book"
+                },
+                {
+                    "name": "h2CheltenhamBook",
+                    "type": "checkbox",
+                    "title": "H2 Cheltenham Book"
                 }
             ]
+        },
+        {
+            "title": "Custom Events",
+            "name": "customEvent",
+            "base": "event",
+            "fields": []
         },
         {
             "title": "Custom Image",
@@ -52,12 +73,6 @@
             "title": "Custom Audio",
             "name": "customAudio",
             "base": "audio",
-            "fields": []
-        },
-        {
-            "title": "Custom Events",
-            "name": "customEvent",
-            "base": "event",
             "fields": []
         }
     ]
