--- a/template.conf
+++ b/template.conf
@@ -11,8 +11,12 @@
 
     "navigations": [
         {
-            "title": "Deem Sitemap",
+            "title": "Deem Main Nav",
             "name": "navi"
+        },
+        {
+            "title": "Deem Nav Tray",
+            "name": "menu"
         }
     ],
 
@@ -29,6 +33,36 @@
             "name": "customText",
             "base": "text",
             "fields": [
+                {
+                    "name": "colorBackground",
+                    "type": "text",
+                    "title": "Color Background, A CSS Hex Value"
+                },
+                {
+                    "name": "lightText",
+                    "type": "text",
+                    "title": "Light Text"
+                },
+                {
+                    "name": "coverStandard",
+                    "type": "checkbox",
+                    "title": "Cover Standard (best for horizontal lead images)"
+                },
+                {
+                    "name": "coverFull",
+                    "type": "checkbox",
+                    "title": "Cover Full (best for horizontal lead images)"
+                },
+                {
+                    "name": "coverLeft",
+                    "type": "checkbox",
+                    "title": "Cover Left (best for vertical lead images)"
+                },
+                {
+                    "name": "coverRight",
+                    "type": "checkbox",
+                    "title": "Cover Right (best for vertical lead images)"
+                },
                 {
                     "name": "h1RoobertMedium",
                     "type": "checkbox",
