squarespace deploy Apr 16, 2019 1:43 PM

--- a/template.conf
+++ b/template.conf
@@ -40,7 +40,7 @@
                 },
                 {
                     "name": "lightText",
-                    "type": "text",
+                    "type": "checkbox",
                     "title": "Light Text"
                 },
                 {
