squarespace deploy Apr 16, 2019 2:06 PM

--- a/template.conf
+++ b/template.conf
@@ -17,6 +17,10 @@
         {
             "title": "Deem Nav Tray",
             "name": "menu"
+        },
+        {
+            "title": "Deem Dev Menu",
+            "name": "dev"
         }
     ],
 
