squarespace deploy Apr 24, 2019 10:11 AM

--- a/template.conf
+++ b/template.conf
@@ -43,6 +43,11 @@
                     "title": "Color Background, A CSS Hex Value"
                 },
                 {
+                    "name": "creditsText",
+                    "type": "wysiwyg",
+                    "title": "Story credits"
+                },
+                {
                     "name": "lightText",
                     "type": "checkbox",
                     "title": "Light Text"
