squarespace deploy Apr 24, 2019 10:27 AM

--- a/template.conf
+++ b/template.conf
@@ -53,24 +53,24 @@
                     "title": "Light Text"
                 },
                 {
-                    "name": "coverStandard",
-                    "type": "checkbox",
-                    "title": "Cover Standard (best for horizontal lead images)"
+                    "name": "coverImage",
+                    "type": "image",
+                    "title": "Cover image"
                 },
                 {
-                    "name": "coverFull",
+                    "name": "coverVerticalRight",
                     "type": "checkbox",
-                    "title": "Cover Full (best for horizontal lead images)"
+                    "title": "Cover with vertical right image"
                 },
                 {
-                    "name": "coverLeft",
+                    "name": "coverHorizontalBottom",
                     "type": "checkbox",
-                    "title": "Cover Left (best for vertical lead images)"
+                    "title": "Cover with horizontal bottom image"
                 },
                 {
-                    "name": "coverRight",
+                    "name": "coverHorizontalTop",
                     "type": "checkbox",
-                    "title": "Cover Right (best for vertical lead images)"
+                    "title": "Cover with horizontal top image"
                 },
                 {
                     "name": "h1RoobertMedium",
