--- a/template.conf
+++ b/template.conf
@@ -68,29 +68,29 @@
                     "title": "Cover with horizontal top image"
                 },
                 {
-                    "name": "lightText",
-                    "type": "checkbox",
-                    "title": "Light Text"
-                },
-                {
                     "name": "h1RoobertMedium",
                     "type": "checkbox",
-                    "title": "H1 Roobert Medium"
+                    "title": "Cover text: H1 Roobert Medium"
                 },
                 {
                     "name": "h2RoobertMedium",
                     "type": "checkbox",
-                    "title": "H2 Roobert Medium"
+                    "title": "Cover text: H2 Roobert Medium"
                 },
                 {
                     "name": "h1CheltenhamBook",
                     "type": "checkbox",
-                    "title": "H1 Cheltenham Book"
+                    "title": "Cover text: H1 Cheltenham Book"
                 },
                 {
                     "name": "h2CheltenhamBook",
                     "type": "checkbox",
-                    "title": "H2 Cheltenham Book"
+                    "title": "Cover text: H2 Cheltenham Book"
+                },
+                {
+                    "name": "lightText",
+                    "type": "checkbox",
+                    "title": "Light Text"
                 }
             ]
         },
