squarespace deploy May 1, 2019 11:27 AM

--- a/template.conf
+++ b/template.conf
@@ -38,9 +38,9 @@
             "base": "text",
             "fields": [
                 {
-                    "name": "coverImage",
-                    "type": "image",
-                    "title": "Cover image"
+                    "name": "coverCredits",
+                    "type": "wysiwyg",
+                    "title": "Story credits"
                 },
                 {
                     "name": "colorBackground",
