--- a/collections/stories.conf
+++ b/collections/stories.conf
@@ -2,6 +2,6 @@
     "title": "Deem Stories",
     "ordering": "user-orderable",
     "addText": "Add posts",
-    "acceptTypes": ["customText"],
+    "acceptTypes": ["customText", "customEvent"],
     "pageSize": 999
 }
