--- a/template.conf
+++ b/template.conf
@@ -73,7 +73,38 @@
             "title": "Custom Events",
             "name": "customEvent",
             "base": "event",
-            "fields": []
+            "fields": [
+                {
+                    "name": "colorBackground",
+                    "type": "text",
+                    "title": "Color Background, A CSS Hex Value"
+                },
+                {
+                    "name": "h1RoobertMedium",
+                    "type": "checkbox",
+                    "title": "Cover text: H1 Roobert Medium"
+                },
+                {
+                    "name": "h2RoobertMedium",
+                    "type": "checkbox",
+                    "title": "Cover text: H2 Roobert Medium"
+                },
+                {
+                    "name": "h1CheltenhamBook",
+                    "type": "checkbox",
+                    "title": "Cover text: H1 Cheltenham Book"
+                },
+                {
+                    "name": "h2CheltenhamBook",
+                    "type": "checkbox",
+                    "title": "Cover text: H2 Cheltenham Book"
+                },
+                {
+                    "name": "lightText",
+                    "type": "checkbox",
+                    "title": "Light Text"
+                }
+            ]
         },
         {
             "title": "Custom Image",
