squarespace deploy May 4, 2019 3:02 PM

--- a/template.conf
+++ b/template.conf
@@ -29,7 +29,13 @@
         "screen.css"
     ],
 
-    "systemCollections": [],
+    "systemCollections": [
+        "blog",
+        "products",
+        "gallery",
+        "events",
+        "album"
+    ],
 
     "customTypes": [
         {
