squarespace deploy May 4, 2019 3:05 PM

--- a/template.conf
+++ b/template.conf
@@ -39,7 +39,7 @@
 
     "customTypes": [
         {
-            "title": "Custom Text",
+            "title": "Story Post",
             "name": "customText",
             "base": "text",
             "fields": [
@@ -76,7 +76,7 @@
             ]
         },
         {
-            "title": "Custom Events",
+            "title": "Event Post",
             "name": "customEvent",
             "base": "event",
             "fields": [
