squarespace deploy May 4, 2019 3:27 PM

--- a/collections/stories.conf
+++ b/collections/stories.conf
@@ -2,6 +2,6 @@
     "title": "Deem Stories",
     "ordering": "user-orderable",
     "addText": "Add posts",
-    "acceptTypes": ["customText", "customEvent"],
+    "acceptTypes": ["customText"],
     "pageSize": 999
 }
