--- a/template.conf
+++ b/template.conf
@@ -49,6 +49,11 @@
                     "title": "Color Background, A CSS Hex Value"
                 },
                 {
+                    "name": "highlightColor",
+                    "type": "text",
+                    "title": "Text Highlight Color, A CSS Hex Value"
+                },
+                {
                     "name": "h1RoobertMedium",
                     "type": "checkbox",
                     "title": "Cover text: H1 Roobert Medium"
@@ -79,38 +84,7 @@
             "title": "Event Post",
             "name": "customEvent",
             "base": "event",
-            "fields": [
-                {
-                    "name": "colorBackground",
-                    "type": "text",
-                    "title": "Color Background, A CSS Hex Value"
-                },
-                {
-                    "name": "h1RoobertMedium",
-                    "type": "checkbox",
-                    "title": "Cover text: H1 Roobert Medium"
-                },
-                {
-                    "name": "h2RoobertMedium",
-                    "type": "checkbox",
-                    "title": "Cover text: H2 Roobert Medium"
-                },
-                {
-                    "name": "h1CheltenhamBook",
-                    "type": "checkbox",
-                    "title": "Cover text: H1 Cheltenham Book"
-                },
-                {
-                    "name": "h2CheltenhamBook",
-                    "type": "checkbox",
-                    "title": "Cover text: H2 Cheltenham Book"
-                },
-                {
-                    "name": "lightText",
-                    "type": "checkbox",
-                    "title": "Light Text"
-                }
-            ]
+            "fields": []
         },
         {
             "title": "Custom Image",
