squarespace deploy May 17, 2019 2:20 PM

--- a/template.conf
+++ b/template.conf
@@ -46,7 +46,12 @@
                 {
                     "name": "colorBackground",
                     "type": "text",
-                    "title": "Color Background, A CSS Hex Value"
+                    "title": "Background Color, A CSS Hex Value"
+                },
+                {
+                    "name": "colorElements",
+                    "type": "text",
+                    "title": "Text & UI Color, A CSS Hex Value"
                 },
                 {
                     "name": "highlightColor",
@@ -72,11 +77,6 @@
                     "name": "h2CheltenhamBook",
                     "type": "checkbox",
                     "title": "Cover text: H2 Cheltenham Book"
-                },
-                {
-                    "name": "lightText",
-                    "type": "checkbox",
-                    "title": "Light Text"
                 }
             ]
         },
