squarespace deploy May 21, 2019 5:41 PM

--- a/collections/products.conf
+++ b/collections/products.conf
@@ -5,5 +5,5 @@
     "pageSize": 999,
     "addText": "Add Product",
     "view": "product-table",
-    "acceptTypes": ["store_item"]
+    "acceptTypes": ["store_item", "customStoreItem"]
 }
