--- a/template.conf
+++ b/template.conf
@@ -39,7 +39,7 @@
 
     "customTypes": [
         {
-            "title": "Story Post",
+            "title": "Story Custom Fields",
             "name": "customText",
             "base": "text",
             "fields": [
@@ -77,6 +77,28 @@
                     "name": "h2CheltenhamBook",
                     "type": "checkbox",
                     "title": "Cover text: H2 Cheltenham Book"
+                }
+            ]
+        },
+        {
+            "title": "Product Custom Fields",
+            "name": "customStoreItem",
+            "base": "store_item",
+            "fields": [
+                {
+                    "name": "colorBackground",
+                    "type": "text",
+                    "title": "Background Color, A CSS Hex Value"
+                },
+                {
+                    "name": "colorElements",
+                    "type": "text",
+                    "title": "Text & UI Color, A CSS Hex Value"
+                },
+                {
+                    "name": "highlightColor",
+                    "type": "text",
+                    "title": "Text Highlight Color, A CSS Hex Value"
                 }
             ]
         },
