--- a/collections/products.conf
+++ b/collections/products.conf
@@ -5,5 +5,5 @@
     "pageSize": 999,
     "addText": "Add Product",
     "view": "product-table",
-    "acceptTypes": ["store_item", "customStoreItem"]
+    "acceptTypes": ["store_item"]
 }
