squarespace deploy Jun 4, 2019 8:57 AM

--- a/template.conf
+++ b/template.conf
@@ -39,7 +39,7 @@
 
     "customTypes": [
         {
-            "title": "Story Custom Fields",
+            "title": "Story",
             "name": "customText",
             "base": "text",
             "fields": [
