squarespace deploy Jun 5, 2019 5:30 PM

--- a/collections/covers.conf
+++ b/collections/covers.conf
@@ -1,7 +1,7 @@
 {
-    "title": "Stories",
+    "title": "Covers",
     "ordering": "user-orderable",
     "addText": "Add posts",
-    "acceptTypes": ["customText"],
+    "acceptTypes": ["customCover"],
     "pageSize": 999
 }
