--- a/template.conf
+++ b/template.conf
@@ -39,6 +39,18 @@
 
     "customTypes": [
         {
+            "title": "Cover",
+            "name": "customCover",
+            "base": "image",
+            "fields": [
+                {
+                    "name": "ctaTextValue",
+                    "type": "text",
+                    "title": "CTA Text for Cover"
+                },
+            ]
+        },
+        {
             "title": "Story",
             "name": "customText",
             "base": "text",
