--- a/collections/products.conf
+++ b/collections/products.conf
@@ -1,5 +1,5 @@
 {
-    "title": "Deem Products",
+    "title": "Products",
     "ordering": "user-orderable",
     "icon": "products",
     "pageSize": 999,
