squarespace deploy Jun 5, 2019 5:31 PM

--- a/collections/folders.conf
+++ b/collections/folders.conf
@@ -11,6 +11,8 @@
         "gallery",
         "products",
         "link",
-        "tracks"
+        "tracks",
+        "stories",
+        "covers"
     ]
 }
