--- a/collections/index.conf
+++ b/collections/index.conf
@@ -11,7 +11,9 @@
         "gallery",
         "products",
         "link",
-        "tracks"
+        "tracks",
+        "stories",
+        "covers"
     ],
     "icon": "projects",
     "indexType": "stacked",
