--- a/collections/covers.conf
+++ b/collections/covers.conf
@@ -1,7 +1,7 @@
 {
     "title": "Covers",
     "ordering": "user-orderable",
-    "addText": "Add posts",
+    "addText": "Add covers",
     "acceptTypes": ["customCover"],
     "pageSize": 999
 }
