--- a/collections/products.conf
+++ b/collections/products.conf
@@ -5,5 +5,6 @@
     "pageSize": 999,
     "addText": "Add Product",
     "view": "product-table",
-    "acceptTypes": ["store_item"]
+    "acceptTypes": ["store_item"],
+    "supportsVideoBackgrounds": "true"
 }
