--- a/collections/stories.conf
+++ b/collections/stories.conf
@@ -1,7 +1,7 @@
 {
     "title": "Stories",
     "ordering": "user-orderable",
-    "addText": "Add posts",
+    "addText": "Add stories",
     "acceptTypes": ["customText"],
     "pageSize": 999
 }
