squarespace deploy Jun 6, 2019 1:48 PM

--- a/collections/products.conf
+++ b/collections/products.conf
@@ -6,5 +6,6 @@
     "addText": "Add Product",
     "view": "product-table",
     "acceptTypes": ["store_item"],
-    "supportsVideoBackgrounds": "true"
+    "supportsVideoBackgrounds": true,
+    "fullData": true
 }
