squarespace deploy Jun 6, 2019 5:37 PM

--- a/template.conf
+++ b/template.conf
@@ -47,6 +47,16 @@
                     "name": "ctaTextValue",
                     "type": "text",
                     "title": "CTA Text for Cover"
+                },
+                {
+                    "name": "blurToCrisp",
+                    "type": "checkbox",
+                    "title": "Blur Photo to Crisp hover"
+                },
+                {
+                    "name": "crispToBlur",
+                    "type": "checkbox",
+                    "title": "Crisp Photo to Blur hover"
                 }
             ]
         },
