squarespace deploy Jun 6, 2019 6:07 PM

--- a/template.conf
+++ b/template.conf
@@ -49,6 +49,21 @@
                     "title": "CTA Text for Cover"
                 },
                 {
+                    "name": "colorBackground",
+                    "type": "text",
+                    "title": "Background Color, A CSS Hex Value"
+                },
+                {
+                    "name": "colorUI",
+                    "type": "text",
+                    "title": "UI Color, A CSS Hex Value"
+                },
+                {
+                    "name": "colorText",
+                    "type": "text",
+                    "title": "Text Color, A CSS Hex Value"
+                },
+                {
                     "name": "blurToCrisp",
                     "type": "checkbox",
                     "title": "Blur Photo to Crisp hover"
