squarespace deploy Jun 26, 2019 1:57 PM

--- a/template.conf
+++ b/template.conf
@@ -44,6 +44,11 @@
             "base": "image",
             "fields": [
                 {
+                    "name": "mobileImage",
+                    "type": "image",
+                    "title": "Mobile Image"
+                },
+                {
                     "name": "ctaTextValue",
                     "type": "text",
                     "title": "CTA Text for Cover"
