--- a/template.conf
+++ b/template.conf
@@ -67,7 +67,12 @@
                     "name": "colorText",
                     "type": "text",
                     "title": "Text Color, A CSS Hex Value"
-                }
+                },
+                {
+                    "name": "hCheltenhamBook",
+                    "type": "checkbox",
+                    "title": "Cover text: Cheltenham Book"
+                },
             ]
         },
         {
